// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <UserAvatar /> with name, with custom component 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 50,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 100,
        "justifyContent": "center",
        "marginTop": -5,
        "width": 100,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Object {
          "color": "#fff",
          "fontSize": 40,
        }
      }
    >
      AB
    </Text>
  </View>
</View>
`;

exports[`should render <UserAvatar /> with name, with src 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 16,
        "borderWidth": 0,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 32,
        "justifyContent": "center",
        "marginTop": -1.6,
        "width": 32,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Object {
          "color": "#fff",
          "fontSize": 12.8,
        }
      }
    >
      AB
    </Text>
  </View>
</View>
`;

exports[`should render <UserAvatar /> with name, without src, default values 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 16,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 32,
        "justifyContent": "center",
        "marginTop": -1.6,
        "width": 32,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Object {
          "color": "#fff",
          "fontSize": 12.8,
        }
      }
    >
      AB
    </Text>
  </View>
</View>
`;

exports[`should warn because size is not number 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 50,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 100,
        "justifyContent": "center",
        "marginTop": -5,
        "width": 100,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Object {
          "color": "#fff",
          "fontSize": 40,
        }
      }
    >
      AB
    </Text>
  </View>
</View>
`;
